Add Java modernization recipes to Liftwizard best practices and apply to codebase.